co2 from car journey displayed,

--- a/client/src/carForms/forms.css
+++ b/client/src/carForms/forms.css
@@ -1,9 +1,30 @@
+.carContainer {
+  background: #eee;
+  padding: 10px;
+  width: 70%;
+  margin: 100px auto;
+  border-radius: 5px;
+  box-shadow: 0 0 10px 1px #3336;
+}
+
+.distanceContainer {
+  background: #eee;
+  padding: 10px;
+  width: 70%;
+  margin: 100px auto;
+  border-radius: 5px;
+  box-shadow: 0 0 10px 1px #3336;
+}
+
 .carForms {
   display: flex;
   flex-direction: column;
-  width: 500px;
+  width: 70%;
   border-radius: 5px;
   background-color: aliceblue;
   justify-content: center;
   margin: 10px;
+}
+form {
+  width: 100%;
 }
