--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+.overallContainer {
+  background: rgb(185, 67, 67);
+  padding: 10px;
+  width: 100%;
+  border-radius: 5px;
+  box-shadow: 0 0 10px 1px #3336;
+}
