--- a/client/src/footprint/footprint.css
+++ b/client/src/footprint/footprint.css
@@ -6,3 +6,12 @@
   border-radius: 5px;
   box-shadow: 0 0 10px 1px #3336;
 }
+
+.results {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  border-radius: 5px;
+  background-color: aliceblue;
+  margin: 10px;
+}
