--- a/client/src/houseForms/home.css
+++ b/client/src/houseForms/home.css
@@ -1,4 +1,4 @@
-.carContainer {
+.homeContainer {
   background: #eee;
   padding: 10px;
   width: 60%;
@@ -7,14 +7,11 @@
   box-shadow: 0 0 10px 1px #3336;
 }
 
-.carForms {
+.homeForms {
   display: flex;
   flex-direction: column;
   width: 70%;
   border-radius: 5px;
   background-color: aliceblue;
   margin: 10px;
-}
-form {
-  width: 100%;
 }
