--- a/client/src/footprint/footprint.css
+++ b/client/src/footprint/footprint.css
@@ -1,7 +1,7 @@
 .resultsContainer {
   background: #eee;
   padding: 10px;
-  width: 70%;
+  width: 60%;
   margin: 100px auto;
   border-radius: 5px;
   box-shadow: 0 0 10px 1px #3336;
@@ -12,6 +12,6 @@
   flex-direction: column;
   width: 70%;
   border-radius: 5px;
-  background-color: aliceblue;
+  background-color: rgb(50, 206, 185);
   margin: 10px;
 }
