--- a/client/src/houseForms/home.css
+++ b/client/src/houseForms/home.css
@@ -21,3 +21,14 @@
   width: 200;
   padding: 20px;
 }
+
+#close {
+  line-height: 12px;
+  width: 18px;
+  font-size: 8pt;
+  margin-top: 1px;
+  margin-right: 2px;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
