--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,8 +18,5 @@ code {
 
 .overallContainer {
   background: rgb(100, 145, 182);
-  padding: 10px;
-  width: 100%;
-  border-radius: 5px;
-  box-shadow: 0 0 10px 1px #3336;
+  padding: 8%;
 }
